--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "wepy": "^1.5.7",
     "wepy-async-function": "^1.4.4",
-    "wepy-com-toast": "^1.0.2"
+    "wepy-com-toast": "^1.0.2",
+    "wepy-swipe-delete": "^1.0.2"
   },
   "devDependencies": {
     "babel-eslint": "^7.2.1",
